--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "Ge Fan"
 title_separator          : "-"
 name                     : &name "Ge Fan"
 description              : &description "Msc students in UESTC"
-url                      : https://fange.ml/resume # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : http://fange.ml/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "FanGhost/resume"
+repository               : "FanGhost/fanghost.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
