--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 author:
   name             : "Ge Fan"
   avatar           : "profile.png"
-  bio              : "I'm a Msc student in UESTC, Chengdu, China. my research interesting include Mechine Learning, Data Mining, Deep Learning and Recommender Systems."
+  bio              : "Msc students in UESTC"
   location         : "Chengdu, China"
   employer         :
   googlescholar    : "https://scholar.google.com/citations?user=pD4HWA0AAAAJ"
