--- a/_config.yml
+++ b/_config.yml
@@ -97,7 +97,7 @@ author:
   keybase          :
   instagram        :
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/fange/"
+  linkedin         : "https://www.linkedin.com/in/fange"
   orcid            : #"http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
