--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Ge Fan"
 title_separator          : "-"
 name                     : &name "Ge Fan"
-description              : &description "Msc students in UESTC"
+description              : &description "researcher at Tencent"
 url                      : http://fange.pro # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "FanGhost/fanghost.github.io"
@@ -80,8 +80,8 @@ analytics:
 author:
   name             : "Ge Fan"
   avatar           : "profile.png"
-  bio              : "Msc students in UESTC"
-  location         : "Chengdu, China"
+  bio              : "researcher at Tencent"
+  location         : "Shenzhen, China"
   employer         :
   googlescholar    : "https://scholar.google.com/citations?user=pD4HWA0AAAAJ"
   email            : "fange@std.uestc.edu.cn"
