--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   location         : "Shenzhen, China"
   employer         :
   googlescholar    : "https://scholar.google.com/citations?user=pD4HWA0AAAAJ"
-  email            : "fange@std.uestc.edu.cn"
+  email            : "ge.fan@outlook.com"
   uri              :
   bitbucket        :
   codepen          :
