--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 author:
   name             : "Ge Fan"
   avatar           : "images/android-chrome-512x512.png"
-  bio              : "researcher at Tencent"
+  bio              : ""
   location         : "Shenzhen, China"
   employer         :
   pubmed           : 
